--- a/src/components/LandingPage.css
+++ b/src/components/LandingPage.css
@@ -6,6 +6,20 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar-track {
+  background: #000000;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #000;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #00FFFF;
+}
+
 /* Basic theme colors */
 :root {
   --primary-slate: #2E3A59;
@@ -246,6 +260,7 @@ body {
   flex-grow: 1;
   overflow-y: auto;
   padding: 24px 0;
+  overflow-x: hidden;
 }
 
 /* --- Message Styles --- */
